@@ -1,3 +1,7 @@
+2007-06-12	Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* Windows build script & README update by Ralph Glasstetter.
+
 2007-06-03	Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/mpegmuxer.cpp: fix size calculation.
